# python-apptk

./: .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  LICENSE  pyproject.toml  setup.cfg
apptk/: cli.py  coerce.py  files.py  func.py  html.py  http.py  images.py  import.py  importing.py  misc.py  protobuf.py
tests/: helpers.py  test_coerce.py  test_files.py  test_func.py  test_images.py  test_misc.py  test_protobuf.py
