[tool.poetry]
name = "apptk"
version = "1.4.3"
description = ""
authors = ["Brandy Sandrowicz <brandy@sandrowicz.org>"]
repository = "https://github.com/bsandrow/python-apptk/"
homepage = "https://github.com/bsandrow/python-apptk/"
license = "BSD-3-Clause"

# [[tool.poetry.source]]
# name = "private pypi"
# url = "https://devpi.example.com/example/example/+simple/"

[tool.poetry.dependencies]
python = "^3.9.10"
pytest = ">=3.4"
requests = {version = "^2.28.1", optional = true}
cloudscrape = {version = "^0.4.2", optional = true}
beautifulsoup4 = {version = "^4.11.1", optional = true}


[tool.poetry.dev-dependencies]
freezegun = "^1.0.0"
black = "^22.3.0"
pydocstyle = "^6.1.1"
deepdiff = "^5.0.2"
pylint = "^2.12.2"
pytest = "^3.4"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
line_length = 120
force_single_line = false
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
force_sort_within_sections = true
# Compatibility with black. Taken directly from the black docs here:
# https://black.readthedocs.io/en/stable/the_black_code_style.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
